log/build_2024-09-13_14-21-12/leg_dector/stdout_stderr.log
running egg_info
writing ../../build/leg_dector/leg_dector.egg-info/PKG-INFO
writing dependency_links to ../../build/leg_dector/leg_dector.egg-info/dependency_links.txt
writing entry points to ../../build/leg_dector/leg_dector.egg-info/entry_points.txt
writing requirements to ../../build/leg_dector/leg_dector.egg-info/requires.txt
writing top-level names to ../../build/leg_dector/leg_dector.egg-info/top_level.txt
reading manifest file '../../build/leg_dector/leg_dector.egg-info/SOURCES.txt'
writing manifest file '../../build/leg_dector/leg_dector.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/airlab/Downloads/LiDAR_HumanFollowing-master/install/leg_dector/lib/python3.8/site-packages/leg_dector/go_back.py to go_back.cpython-38.pyc
  File "/home/airlab/Downloads/LiDAR_HumanFollowing-master/install/leg_dector/lib/python3.8/site-packages/leg_dector/go_back.py", line 99
    if self.map_data is not None and self.start is not None              #and self.goal is not None:
                                                                         ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/airlab/Downloads/LiDAR_HumanFollowing-master/install/leg_dector/lib/python3.8/site-packages/leg_dector-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/leg_dector/leg_dector.egg-info to /home/airlab/Downloads/LiDAR_HumanFollowing-master/install/leg_dector/lib/python3.8/site-packages/leg_dector-0.0.0-py3.8.egg-info
running install_scripts
Installing go_back script to /home/airlab/Downloads/LiDAR_HumanFollowing-master/install/leg_dector/lib/leg_dector
Installing human_following script to /home/airlab/Downloads/LiDAR_HumanFollowing-master/install/leg_dector/lib/leg_dector
Installing leg_detection script to /home/airlab/Downloads/LiDAR_HumanFollowing-master/install/leg_dector/lib/leg_dector
writing list of installed files to '/home/airlab/Downloads/LiDAR_HumanFollowing-master/build/leg_dector/install.log'
